--- a/research.html
+++ b/research.html
@@ -400,9 +400,22 @@
         <div id="poster" class="tabcontent"><br>
 
           <p>
+            <b>A Normative Account of the Influences of Contextual Familiarity and Novelty on Episodic Memory Policy</b>
+            <br>
+            <b>Lu, Q.</b>, Norman, K. A., & Shohamy, D. (2024).
+            <br>
+            Conference on Cognitive Computational Neuroscience.
+            <br>
+            paper
+            <br>
+          </p>
+          <br>
+
+
+          <p>
             <b>Episodic Memory Supports the Acquisition of Structured Task Representations</b>
             <br>
-            <b>Lu, Q.</b>, Hummos, A., Norman, K. A. (2024).
+            <b>Lu, Q.</b>, Hummos, A., & Norman, K. A. (2024).
             <br>
             Proceedings of the Annual Meeting of the Cognitive Science Society 46 (46).
             <br>
@@ -415,7 +428,7 @@
           <p>
             <b>Toward a More Neurally Plausible Neural Network Model of Latent Cause Inference. </b>
             <br>
-            <b>Lu, Q.</b>, Nguyen, T., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., Norman, K. A. (2023)
+            <b>Lu, Q.</b>, Nguyen, T., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., & Norman, K. A. (2023)
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
@@ -427,7 +440,7 @@
           <p>
             <b>Strategic Control of Episodic Memory Through Post-Gating.</b>
             <br>
-            Dong, C., <b>Lu, Q.</b>, Norman, K. A. (2023)
+            Dong, C., <b>Lu, Q.</b>, & Norman, K. A. (2023)
             <br>
             The Conference on Cognitive Computational Neuroscience (CCN)
             <br>
