--- a/research.html
+++ b/research.html
@@ -237,6 +237,16 @@
         <div id="talk" class="tabcontent"><br>
 
           <p>
+            <b>A Normative Account of the Influences of Contex- tual Familiarity and Novelty on Episodic Memory Policy</b>
+            <br>
+            <b>Lu, Q.</b>, Norman, K. A., & Shohamy, D. (2024).
+            <br>
+            Manhattan Area Memory Meeting
+            <br>
+          </p>
+          <br>
+
+          <p>
             <b>Episodic Memory Supports the Acquisition of Structured Task Representations</b>
             <br>
             <b>Lu, Q.</b>, Hummos, A., Norman, K. A. (2024).
