--- a/research.html
+++ b/research.html
@@ -237,21 +237,21 @@
         <div id="talk" class="tabcontent"><br>
 
           <p>
-            <b>A Normative Account of the Influences of Contex- tual Familiarity and Novelty on Episodic Memory Policy</b>
-            <br>
-            <b>Lu, Q.</b>, Norman, K. A., & Shohamy, D. (2024).
-            <br>
-            Manhattan Area Memory Meeting
-            <br>
-          </p>
-          <br>
-
-          <p>
             <b>Episodic Memory Supports the Acquisition of Structured Task Representations</b>
             <br>
             <b>Lu, Q.</b>, Hummos, A., Norman, K. A. (2024).
             <br>
             Annual Meeting of the Cognitive Science Society (CogSci)
+            <br>
+          </p>
+          <br>
+
+          <p>
+            <b>A Normative Account of the Influences of Contex- tual Familiarity and Novelty on Episodic Memory Policy</b>
+            <br>
+            <b>Lu, Q.</b>, Norman, K. A., & Shohamy, D. (2024).
+            <br>
+            Manhattan Area Memory Meeting
             <br>
           </p>
           <br>
@@ -429,7 +429,7 @@
             <br>
             Proceedings of the Annual Meeting of the Cognitive Science Society 46 (46).
             <br>
-            <a href="https://www.biorxiv.org/content/10.1101/2024.05.06.592749v1">paper</a>
+            <a href="https://www.biorxiv.org/content/10.1101/2024.05.06.592749v1">paper</a>, slides
             <br>
           </p>
           <br>
