--- a/research.html
+++ b/research.html
@@ -247,7 +247,7 @@
           <br>
 
           <p>
-            <b>A Normative Account of the Influences of Contex- tual Familiarity and Novelty on Episodic Memory Policy</b>
+            <b>A Normative Account of the Influences of Contextual Familiarity and Novelty on Episodic Memory Policy</b>
             <br>
             <b>Lu, Q.</b>, Norman, K. A., & Shohamy, D. (2024).
             <br>
