--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
           <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
       </p>
 
+      <p class="view">
+        <a href="https://orcid.org/0000-0002-0730-5240">
+          <img src="imgs/logo/orcid.png" alt="github" width=40px></a>
+        <!-- <a href="https://www.instagram.com/lu.qihong/">
+          <img src="imgs/logo/instagram.png" alt="github" width=40px></a> -->
+      </p>
+
+
+
     </header>
 
     <!-- the END of left column  -->
@@ -106,6 +115,12 @@
         <br><br>
         News:
         <ul>
+
+          <li>
+          [2024/06]
+          I will travel to <a href="https://2024.ccneuro.org/">CCN 2024</a> to present our recent work,
+          <a href='https://2024.ccneuro.org/poster/?id=122'>A Normative Account of the Influences of Contextual Familiarity and Novelty on Episodic Memory Policy</a>!
+          </li>
 
           <li>
           [2024/05]
