--- a/teaching.html
+++ b/teaching.html
@@ -62,6 +62,14 @@
           <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
       </p>
 
+      <p class="view">
+        <a href="https://orcid.org/0000-0002-0730-5240">
+          <img src="imgs/logo/orcid.png" alt="github" width=40px></a>
+        <!-- <a href="https://www.instagram.com/lu.qihong/">
+          <img src="imgs/logo/instagram.png" alt="github" width=40px></a> -->
+      </p>
+
+
     </header>
 
     <!-- the END of left column  -->
