--- a/research.html
+++ b/research.html
@@ -424,7 +424,22 @@
             <br>
             Conference on Cognitive Computational Neuroscience.
             <br>
-            paper
+            <a href='https://2024.ccneuro.org/poster/?id=122'>paper</a>,
+            poster
+            <br>
+          </p>
+          <br>
+
+
+          <p>
+            <b>Modeling Multiplicity of Strategies in Free Recall with Neural Networks</b>
+            <br>
+            Li, M., Jensen, K.T., <b>Lu, Q.</b>, Zhang, Q. Mattar. M.G. (2024).
+            <br>
+            Conference on Cognitive Computational Neuroscience.
+            <br>
+            <a href='https://2024.ccneuro.org/poster/?id=528'>paper</a>,
+            poster
             <br>
           </p>
           <br>
