--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
         <ul>
 
           <li>
-          [2024/06]
-          I will travel to <a href="https://2024.ccneuro.org/">CCN 2024</a> to present our recent work,
-          <a href='https://2024.ccneuro.org/poster/?id=122'>A Normative Account of the Influences of Contextual Familiarity and Novelty on Episodic Memory Policy</a>!
+          [2024/07]
+          Our recent work,
+          <a href='https://2024.ccneuro.org/poster/?id=122'>A Normative Account of the Influences of Contextual Familiarity and Novelty on Episodic Memory Policy</a>,
+          got accepted as a poster at <a href="https://2024.ccneuro.org/">CCN 2024</a>
+          and as a nanosymposium talk at <a href="https://www.sfn.org/meetings/neuroscience-2024"> SFN 2024</a>
+          !
           </li>
 
           <li>
