--- a/research.html
+++ b/research.html
@@ -123,11 +123,11 @@
           <p>
             <b>Reconciling Shared versus Context-Specific Information in a Neural Network Model of Latent Causes</b>
             <br>
-            <b>Lu, Q.</b>, Nguyen, T., Zhang Q., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., Norman, K. A. (2023).
+            <b>Lu, Q.</b>, Nguyen, T., Zhang Q., Hasson, U., Griffiths, T. L., Zacks, J. M., Gershman, S. J., Norman, K. A. (2024).
             <br>
-            arXiv
+            Scientific Reports
             <br>
-            <a href="https://arxiv.org/abs/2312.08519">paper</a>,
+            <a href="https://www.nature.com/articles/s41598-024-64272-5?utm_source=rct_congratemailt&utm_medium=email&utm_campaign=oa_20240722&utm_content=10.1038/s41598-024-64272-5">paper</a>,
             <a href="https://github.com/qihongl/LCNet">code</a>
             <br>
           </p>
@@ -251,6 +251,7 @@
             <br>
             Annual Meeting of the Cognitive Science Society (CogSci)
             <br>
+            <a href="https://docs.google.com/presentation/d/1bzoLqivbleWpXsi6sN_vCzW0Ad32AhO6XErbl6CBxKo/edit?usp=sharing">slides</a>
           </p>
           <br>
 
@@ -271,6 +272,7 @@
             <br>
             Context and Episodic Memory Symposium (CEMS)
             <br>
+            <a href="https://docs.google.com/presentation/d/1bzoLqivbleWpXsi6sN_vCzW0Ad32AhO6XErbl6CBxKo/edit?usp=sharing">slides</a>
           </p>
           <br>
 
@@ -388,7 +390,7 @@
             <a href="https://docs.google.com/presentation/d/1XZRxbPL5WUfUhIRP_pNsQ43tqzfQ6C-9fquiqucItFY/edit?usp=sharing">slides</a>
           </p>
           <br>
-
+          
           <p>
             <b>Learning to use episodic memory for event prediction</b>
             <br>
@@ -452,7 +454,8 @@
             <br>
             Proceedings of the Annual Meeting of the Cognitive Science Society 46 (46).
             <br>
-            <a href="https://www.biorxiv.org/content/10.1101/2024.05.06.592749v1">paper</a>, slides
+            <a href="https://www.biorxiv.org/content/10.1101/2024.05.06.592749v1">paper</a>, 
+            <a href="https://docs.google.com/presentation/d/1bzoLqivbleWpXsi6sN_vCzW0Ad32AhO6XErbl6CBxKo/edit?usp=sharing">slides</a>
             <br>
           </p>
           <br>
