--- a/research.html
+++ b/research.html
@@ -244,6 +244,16 @@
 
         <div id="talk" class="tabcontent"><br>
 
+          <p></p>
+            <b>A Normative Account of the Influences of Contextual Familiarity and Novelty on Episodic Memory Policy For Value-Based Decision-Making</b>
+            <br>
+            <b>Lu, Q.</b>, Norman, K. A., & Shohamy, D. (2024).
+            <br>
+            Society for Neuroscience (SfN), Nano-symposium: Value-Based Decision-Making Across Model Systems
+            <br>
+          </p>
+          <br>
+
           <p>
             <b>Episodic Memory Supports the Acquisition of Structured Task Representations</b>
             <br>
