--- a/index.html
+++ b/index.html
@@ -45,30 +45,28 @@
       <p class="view"><h4><a href="teaching.html">Teaching</h4></a></p>
       <p class="view"><a href="photo.html" target="_blank"><h4>Photography</h4></a></p>
       <p class="view"> <a href="docs/CV_QL.pdf" target="_blank">CV</a> </p>
-
       <br><br>
 
       <p class="view">
         <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
           <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+          <a href="https://www.researchgate.net/profile/Qihong-Lu-2">
+            <img src="imgs/logo/ResearchGate.jpg" alt="google scholar" width=40px></a>
+      </p>
+
+      <p class="view">
         <a href="https://twitter.com/Qihong_Lu">
           <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
+          <a href="https://bsky.app/profile/qlu.bsky.social">
+            <img src="imgs/logo/bluesky.jpg" alt="twitter" width=40px></a>        
       </p>
 
       <p class="view">
         <a href="https://github.com/QihongL">
-          <img src="imgs/logo/github.svg" alt="github" width=40px></a>
-        <a href="https://www.instagram.com/lu.qihong/">
-          <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
-      </p>
-
-      <p class="view">
+          <img src="imgs/logo/github.svg" alt="github" width=40px></a>        
         <a href="https://orcid.org/0000-0002-0730-5240">
           <img src="imgs/logo/orcid.png" alt="github" width=40px></a>
-        <!-- <a href="https://www.instagram.com/lu.qihong/">
-          <img src="imgs/logo/instagram.png" alt="github" width=40px></a> -->
       </p>
-
 
 
     </header>
@@ -121,27 +119,34 @@
           Our recent work,
           <a href='https://2024.ccneuro.org/poster/?id=122'>A Normative Account of the Influences of Contextual Familiarity and Novelty on Episodic Memory Policy</a>,
           got accepted as a poster at <a href="https://2024.ccneuro.org/">CCN 2024</a>
-          and as a nanosymposium talk at <a href="https://www.sfn.org/meetings/neuroscience-2024"> SFN 2024</a>
-          !
+          and as a nanosymposium talk at <a href="https://www.sfn.org/meetings/neuroscience-2024"> SFN 2024</a>!
           </li>
+          
+          <li>
+            [2024/07]
+            Our recent work,
+            <a href='https://www.biorxiv.org/content/10.1101/2024.05.06.592749v1'>Episodic memory supports the acquisition of structured task representations</a>,
+            got accepted as a talk by
+            <a href='https://cognitivesciencesociety.org/cogsci-2024/'>CogSci 2024</a>!
+            Feel free to reach out if you have any question/comment/suggestion!
+            </li>          
+
+          <li>
+            [2024/07]
+            I’m pleased to announce that our paper –
+            <a href='https://www.nature.com/articles/s41598-024-64272-5?utm_source=rct_congratemailt&utm_medium=email&utm_campaign=oa_20240722&utm_content=10.1038/s41598-024-64272-5'>Reconciling Shared versus Context-Specific Information in a Neural Network Model of Latent Causes</a>
+            got published in Scientific Reports! 
+          </li>  
 
           <li>
           [2024/05]
           Our recent work,
           <a href='https://www.biorxiv.org/content/10.1101/2024.05.06.592749v1'>Episodic memory supports the acquisition of structured task representations</a>,
           got accepted as a talk by
-          <a href='https://memory.psych.upenn.edu/CEMS_2024'>CEMS 2024</a>
-          and
-          <a href='https://cognitivesciencesociety.org/cogsci-2024/'>CogSci 2024</a>!
+          <a href='https://memory.psych.upenn.edu/CEMS_2024'>CEMS 2024</a>! 
           Feel free to reach out if you have any question/comment/suggestion!
           </li>
 
-          <li>
-          [2023/12]
-          I’m pleased to announce our preprint –
-          <a href='https://arxiv.org/abs/2312.08519 '>Reconciling Shared versus Context-Specific Information in a Neural Network Model of Latent Causes</a>.
-          Feel free to reach out if you have any question/comment/suggestion!
-          </li>
 
           <li>
           [2023/09]
