--- a/research.html
+++ b/research.html
@@ -50,22 +50,22 @@
       <p class="view">
         <a href="https://scholar.google.com/citations?user=b9D0RmMAAAAJ&hl=en&oi=ao">
           <img src="imgs/logo/google-scholar.png" alt="google scholar" width=40px></a>
+          <a href="https://www.researchgate.net/profile/Qihong-Lu-2">
+            <img src="imgs/logo/ResearchGate.jpg" alt="google scholar" width=40px></a>
+      </p>
+
+      <p class="view">
         <a href="https://twitter.com/Qihong_Lu">
           <img src="imgs/logo/twitter_r.png" alt="twitter" width=40px></a>
+          <a href="https://bsky.app/profile/qlu.bsky.social">
+            <img src="imgs/logo/bluesky.jpg" alt="twitter" width=40px></a>        
       </p>
 
       <p class="view">
         <a href="https://github.com/QihongL">
-          <img src="imgs/logo/github.svg" alt="github" width=40px></a>
-        <a href="https://www.instagram.com/lu.qihong/">
-          <img src="imgs/logo/instagram.png" alt="github" width=40px></a>
-      </p>
-
-      <p class="view">
+          <img src="imgs/logo/github.svg" alt="github" width=40px></a>        
         <a href="https://orcid.org/0000-0002-0730-5240">
           <img src="imgs/logo/orcid.png" alt="github" width=40px></a>
-        <!-- <a href="https://www.instagram.com/lu.qihong/">
-          <img src="imgs/logo/instagram.png" alt="github" width=40px></a> -->
       </p>
 
 
