--- a/research.html
+++ b/research.html
@@ -244,7 +244,17 @@
 
         <div id="talk" class="tabcontent"><br>
 
-          <p></p>
+        <p>
+          <b>Human Episodic Memory Reflect Adaptation to Statistics of the Natural Environment</b>
+          <br>
+          <b>Lu, Q.</b>, Norman, K. A., & Shohamy, D. (2024).
+          <br>
+          Kwok Lab, Duke Kunshan University, PI: Sze Chai Kwok
+          <br>
+        </p>
+        <br> 
+
+          <p>
             <b>A Normative Account of the Influences of Contextual Familiarity and Novelty on Episodic Memory Policy For Value-Based Decision-Making</b>
             <br>
             <b>Lu, Q.</b>, Norman, K. A., & Shohamy, D. (2024).
@@ -417,7 +427,20 @@
 
 
 
-        <div id="poster" class="tabcontent"><br>
+        <div id="poster" class="tabcontent"><br>          
+           
+          <p>
+            <b>A Neural Network Model of Flexible Decision-Making with Episodic Memory</b>
+            <br>
+            Li, M., Jensen T.K., <b>Lu, Q.</b>, Mattar M.G. (2025). 
+            <br>
+            Multidisciplinary Conference on Reinforcement Learning and Decision Making. 
+            <br>
+            poster
+            <br>
+          </p>
+          <br>
+          
 
           <p>
             <b>A Normative Account of the Influences of Contextual Familiarity and Novelty on Episodic Memory Policy</b>
