--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
         <br><br>
         News:
         <ul>
-
+          <li>
+            [2024/03] I will visit NYU to give a talk at the <a href='https://gureckislab.org/concats/'>NYUConcats seminar</a>! 
+          </li>
+                    
           <li>
           [2024/07]
           Our recent work,
