--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       <br>
       <center>
-        <p style="width: 600px;"><img src="/imgs/myPics/me.jpg"></p>
+        <p style="width: 400px;"><img src="/imgs/myPics/me.jpg"></p>
       </center>
 
       <p>
@@ -113,6 +113,16 @@
         <br><br>
         News:
         <ul>
+          <li>
+            <strong>
+            [2025/06]
+            I’m thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor in Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>
+            I have RA, PhD (fully funded), and postdoc positions available! Come work with me on neural network models + experiments on human memory! </br> 
+            Here's a <a href="=https://bsky.app/profile/qlu.bsky.social/post/3lomqghrlas2p">post</a> I made. And I will have more formal position post up soon!
+          </strong>
+          </li>
+          </br>
+
           <li>
             [2025/03] I will visit NYU to give a talk at the <a href='https://gureckislab.org/concats/'>NYUConcats seminar</a>! 
           </li>
