--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             [2025/06]
             I’m thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor in Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>
             I have RA, PhD (fully funded), and postdoc positions available! Come work with me on neural network models + experiments on human memory! </br> 
-            Here's a <a href="=https://bsky.app/profile/qlu.bsky.social/post/3lomqghrlas2p">post</a> I made. And I will have more formal position post up soon!
+            Here's a <a href="https://bsky.app/profile/qlu.bsky.social/post/3lomqghrlas2p">post</a> I made. And I will have more formal position post up soon!
           </strong>
           </li>
           </br>
