--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
         <!-- <strong>Welcome to my personal webpage!</strong> -->
       </h3>
 
-      <br>
-      <center>
+      <!-- <br> -->
+      <!-- <center>
         <p style="width: 400px;"><img src="/imgs/myPics/me.jpg"></p>
-      </center>
+      </center> -->
 
       <p>
         Hi, my name is Qihong Lu (吕其鸿).
-        I'm interested in computational models of episodic memory.
+        I use artificial neural networks as model organisms to study computational principles of learning and memory.
         I'm currently an
         <a href="https://zuckermaninstitute.columbia.edu/alan-kanzer-postdoctoral-fellowship-program">Alan Kanzer Postdoctoral Fellow</a>
         at Columbia University, working with
@@ -118,8 +118,12 @@
             [2025/06]
             I’m thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor in Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>
             I have RA, PhD (fully funded), and postdoc positions available! Come work with me on neural network models + experiments on human memory! </br> 
-            Here's a <a href="https://bsky.app/profile/qlu.bsky.social/post/3lomqghrlas2p">post</a> I made. And I will have more formal position post up soon!
-          </strong>
+            City U of HK is a great university and an English-speaking environment! More generally, HK is very English-friendly and a fun place to live! </br> 
+            The start date is highly flexible! I can admit PhD students all year round if the regular September start date doesn’t work well! 
+            Here’s the <a href="https://www.cityu.edu.hk/phd/programmes/neuroscience/index.html">PhD program info page</a>.</br> 
+            Please contact me with your CV if you are interested in working together! I’m happy to chat over Zoom! </br> 
+            Contact: qlu.neuro[at]gmail.com
+            </strong>
           </li>
           </br>
 
