--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
           <li>
             <strong>
             [2025/06]
-            I’m thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor in Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>
+            I’m thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor</a> 
+            in <a href="https://www.cityu.edu.hk/neuro/">Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>
             I have RA, PhD (fully funded), and postdoc positions available! Come work with me on neural network models + experiments on human memory! </br> 
             City U of HK is a great university and an English-speaking environment! More generally, HK is very English-friendly and a fun place to live! </br> 
             The start date is highly flexible! I can admit PhD students all year round if the regular September start date doesn’t work well! 
