--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             I have RA, PhD (fully funded), and postdoc positions available! Come work with me on neural network models + experiments on human memory! </br> 
             City U of HK is a great university and an English-speaking environment! More generally, HK is very English-friendly and a fun place to live! </br> 
             The start date is highly flexible! I can admit PhD students all year round if the regular September start date doesn’t work well! 
-            Here’s the <a href="https://www.cityu.edu.hk/phd/programmes/neuroscience/index.html">PhD program info page</a>.</br> 
+            Here’s the <a href="https://www.cityu.edu.hk/pg/research-degree-programmes">PhD program info page</a>.</br> 
             Please contact me with your CV if you are interested in working together! I’m happy to chat over Zoom! </br> 
             Contact: qlu.neuro[at]gmail.com
             </strong>
