--- a/index.html
+++ b/index.html
@@ -129,7 +129,15 @@
           </br>
 
           <li>
-            [2025/03] I will visit NYU to give a talk at the <a href='https://gureckislab.org/concats/'>NYUConcats seminar</a>! 
+          [2025/04]
+          I gave a memory model 101 workshop in University of Hong Kong! 
+          Here're 
+          <a href="https://docs.google.com/presentation/d/1fT6pxu39zKDldI5bdBTMS_IXeEHCMVG7og5qCr0zZIU/edit?usp=sharing">the slides</a> 
+          and <a href="https://github.com/qihongl/demo-rumelhart-net">the repo</a>!
+          </li>
+
+          <li>
+            [2025/03] I gave a talk at the <a href='https://gureckislab.org/concats/'>NYU Concats seminar</a>! 
           </li>
                     
           <li>
