--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
 
     <section>
 
-      <h3>
+      <!-- <h3>
         <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-        <!-- <strong>Welcome to my personal webpage!</strong> -->
-      </h3>
+      </h3> -->
 
       <!-- <br> -->
       <!-- <center>
@@ -88,6 +87,26 @@
       </center> -->
 
       <p>
+
+        
+        <!-- <center>
+            <img src="imgs/myPics/ql.png" alt="Qihong Lu" style="max-width: 200px;">
+        </center> -->
+
+        <div class="highlight-announcement">
+          I’m thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor</a> 
+          in <a href="https://www.cityu.edu.hk/neuro/">Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>
+          <strong>
+          I have RA, PhD (fully funded), and postdoc positions available! Come work with me on neural network models + experiments on human memory! </br> 
+          </strong>
+          City U of HK is a great university and an English-speaking environment! More generally, HK is very English-friendly and a fun place to live! </br> 
+          The start date is highly flexible! I can admit PhD students all year round if the regular September start date doesn’t work well! 
+          Here’s the <a href="https://www.cityu.edu.hk/pg/research-degree-programmes">PhD program info page</a>.</br> 
+          Please contact me with your CV if you are interested in working together! I’m happy to chat over Zoom! </br> 
+          Contact: qlu.neuro[at]gmail.com              
+        </div>
+
+
         Hi, my name is Qihong Lu (吕其鸿).
         I use artificial neural networks as model organisms to study computational principles of learning and memory.
         I'm currently an
@@ -112,25 +131,15 @@
 
         <br><br>
         News:
+
         <ul>
           <li>
-            <strong>
             [2025/06]
             I’m thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor</a> 
-            in <a href="https://www.cityu.edu.hk/neuro/">Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>
-            I have RA, PhD (fully funded), and postdoc positions available! Come work with me on neural network models + experiments on human memory! </br> 
-            City U of HK is a great university and an English-speaking environment! More generally, HK is very English-friendly and a fun place to live! </br> 
-            The start date is highly flexible! I can admit PhD students all year round if the regular September start date doesn’t work well! 
-            Here’s the <a href="https://www.cityu.edu.hk/pg/research-degree-programmes">PhD program info page</a>.</br> 
-            Please contact me with your CV if you are interested in working together! I’m happy to chat over Zoom! </br> 
-            Contact: qlu.neuro[at]gmail.com
-            </strong>
-          </li>
-          </br>
-
+            in <a href="https://www.cityu.edu.hk/neuro/">Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>            
           <li>
           [2025/04]
-          I gave a memory model 101 workshop in University of Hong Kong! 
+          I gave a Memory Model 101 workshop in University of Hong Kong! 
           Here're 
           <a href="https://docs.google.com/presentation/d/1fT6pxu39zKDldI5bdBTMS_IXeEHCMVG7og5qCr0zZIU/edit?usp=sharing">the slides</a> 
           and <a href="https://github.com/qihongl/demo-rumelhart-net">the repo</a>!
