--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <b>
 
           <div style="text-align: left;">
-          I have RA, PhD (fully funded), and postdoc positions available! 
+          I have RA, PhD (funded for 4 years), and postdoc positions available! 
           Come work with me on neural network models + behavioral/neuroimging experiments on human memory!
           </b>
           CityUHK is a great university and an English-speaking environment, and HK is English-friendly in general!
