--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <b>
 
           <div style="text-align: left;">
-          I have RA, PhD (funded for 4 years), and postdoc positions available! 
+          I have RA, PhD (funded for 4 years), and postdoc positions available!
           Come work with me on neural network models + behavioral/neuroimging experiments on human memory!
           </b>
           CityUHK is a great university and an English-speaking environment, and HK is English-friendly in general!
@@ -141,12 +141,12 @@
 
         <ul>
           <li>
-            [2025/06]
+            [2025/05]
             I’m thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor</a>
             in <a href="https://www.cityu.edu.hk/neuro/">Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>
           <li>
-          [2025/04]
-          I gave a Memory Model 101 workshop in University of Hong Kong!
+          [2025/04; 2025/05]
+          I gave a Memory Model 101 workshop in University of Hong Kong and Hong Kong University of Science and Technology!
           Here're
           <a href="https://docs.google.com/presentation/d/1fT6pxu39zKDldI5bdBTMS_IXeEHCMVG7og5qCr0zZIU/edit?usp=sharing">the slides</a>
           and <a href="https://github.com/qihongl/demo-rumelhart-net">the repo</a>!
