--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
           <div style="text-align: left;">
           I have RA, PhD (funded for 4 years), and postdoc positions available!
-          Come work with me on neural network models + behavioral/neuroimging experiments on human memory!
+          Come work with me on neural network models + behavioral/neuroimaging experiments on human memory!
           </b>
           CityUHK is a great university and an English-speaking environment, and HK is English-friendly in general!
           <br><br>
