--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <br><br>
           If you are interested in <a href='https://www.cityu.edu.hk/neuro/edu/rpg.htm'> the Neuroscience PhD program</a>,
           please read the <a href="https://www.cityu.edu.hk/pg/research-degree-programmes">CityU PhD program info page</a> carefully,
-          and make sure you are aware of the "Minimal Entrance Requirements" of the program. The start date is flexible, if the regular September start date is too early/late!
+          and make sure you are aware of the "Entrance Requirements" of the program.
           </div>
           <br>
           Please contact me with your CV if you are interested in working together! </br>
