--- a/index.html
+++ b/index.html
@@ -140,10 +140,20 @@
         News:
 
         <ul>
+
+          <li>
+            [2025/07] Our paper <a href='https://www.sciencedirect.com/science/article/pii/S1364661325001792?dgcid=author'>Towards large language models with human-like episodic memory</a> is out in Trends in Cognitive Sciences!
+          </li>
+
+          <li>
+            [2025/07] I gave a talk at the <a href='https://www.wmsymposium.org/'>Working Memory Symposium</a>!
+          </li>
+
           <li>
             [2025/05]
             I’m thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor</a>
             in <a href="https://www.cityu.edu.hk/neuro/">Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br>
+          </li>
           <li>
           [2025/04; 2025/05]
           I gave a Memory Model 101 workshop in University of Hong Kong and Hong Kong University of Science and Technology!
