--- a/index.html
+++ b/index.html
@@ -94,8 +94,13 @@
         </center> -->
 
         <div class="highlight-announcement" style="text-align: center;">
-          I'm thrilled to announce that I will start as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor</a>
-          in <a href="https://www.cityu.edu.hk/neuro/">Neuroscience</a> at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026! </br></br>
+          I'm thrilled to announce that I will start
+          as a <a href="https://www.cityu.edu.hk/vpti/paps/">Presidential Assistant Professor</a>
+          </br>
+          in <a href="https://www.cityu.edu.hk/neuro/">Neuroscience</a>
+          at the <a href="https://www.cityu.edu.hk/">City U of Hong Kong</a> in Jan 2026!
+          Here's my <a href="https://qlulab.github.io/website/">lab website</a>!
+          </br></br>
           <b>
 
           <div style="text-align: left;">
